update and delete working as expected
