# routes/temple.js
@@ -6,4 +6,8 @@ routes.get('/:temple_id', temples.findOne);
 
 routes.post('/', temples.create);
 
+routes.put('/:temple_id', temples.update);
+
+routes.delete('/:temple_id', temples.delete);
+
 module.exports = routes;
